bk_ida/gccida/c1/dump_bb
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_bb/src/cfgrtl.c:1904:10: error: use of undeclared identifier 'unk_607BEF'
fwrite( &unk_607BEF, 0x11uLL, 1uLL, outf); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_bb/src/obj/cfgrtl.o] Error 1
